add post created time and id.
